--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
 
 <body>
   <div class="container">
-    <h1 class=" text-center">Pitsa buyurtma qilish</h1>
+    <h1 class=" text-center h3 text-danger">
+      <img src="img/pizza-rounded.png" alt="" width="80" height="80">
+      Pitsa buyurtma qilish
+    </h1>
     <form class="main-form__wrapper row" method="POST" action="https://echo.htmlacademy.ru/">
       <!-- ======================================
     SURVEY WRAPPER
     ====================================== -->
-      <div class="survey__wrapper col-8 border-right">
+      <div class="survey__wrapper col-12 col-md-8 border-right">
         <!-- Selection -->
         <div class="form-group">
           <label class="h5" for="selection">Noni qanday bo`lsin?</label>
@@ -41,7 +44,7 @@
       <!-- ===========================================
     RESULT WRAPPER
     ========================================== -->
-      <div class="result__wrapper col-4">
+      <div class="result__wrapper col-12 col-md-4">
         <!-- Selection Result -->
         <div class="form-group">
           <p class="font-weight-bold">Non:
