Add checkbox function

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <div class="js-radio__size-box d-flex align-items-center"></div>
         </div>
         <!-- Products box -->
-        <div class="form-group js-products__box">
+        <div class="form-group js-products__box ">
           <h2 class="h5">Ustiga nima solaylik?</h2>
         </div>
         <!-- Additions box -->
@@ -59,7 +59,8 @@
         </div>
         <!-- Products box Result -->
         <div class="form-group">
-          <p class="font-weight-bold js-poducts-result">Ustida:
+          <p class="font-weight-bold">Ustida:
+            <span class="js-poducts-result font-weight-normal d-block"></span>
           </p>
         </div>
         <!-- Additions box Result -->
